2002-12-24  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* commited a first version of working audio, including the "monitor~"
	object

2002-12-20  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>

	* encapsulated all patcher related fields of fts_object_t to patcher_data structure only allocated when needed
	* introduced new API call fts_object_error() (replacing fts_object_signal_runtime_error and fts_object_set_error)

2002-12-17  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* commited an intermediate version of audio. It currently does not compile, but
	include the necessary prototypes for updating the audio ports.

2002-12-16  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* add python fts client into autoconf stuff (install into $(datadir)/jmax/client/python).
	We can't use AM_PATH_PYTHON which is only available for automake version > 1.5 (RedHat 7.3 use automake-1.4-p5)

2002-12-12  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* fixed templates w.r.t. $args[] variable and object description

2002-12-10  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>

	* finalized method declaration API and outlet/message sending dispatcher
	* added doxygen (like) comments to header files (class.h and message.h)

2002-12-10  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* (re)added templates. Changed expression.c for object evaluation.

2002-12-09  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* Split audio.h into audio.h, audioconfig.h and audiolabel.h

	* Clean ftsprivate header to be conform with current convention (no include in header)

2002-12-06  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* Split audio.c into audio.c, audioconfig.c and audiolabel.c

	* Work in progress for client<->server audio configuration communication

2002-12-03  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* Begin to merge audio and midi configuration in fts/config.c:
	- create audioconfig_type class
	- create config_type class
